Updated account service